# cpp-timer

./: CMakeLists.txt  LICENSE  README.md  timer.h
test/: main.cpp
